Updated resource file names according to the task specification.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 outputFileEncoding=UTF-8
 outputFileNewLineCharacter=\n
 outputFileColumnDelimiter=\t
-outputFile1Path=src/main/resources/file1.txt
-outputFile2Path=src/main/resources/file2.txt
+outputFile1Path=vrijednost zalihe - artikli.txt
+outputFile2Path=vrijednost zalihe - PM.txt
 exchangeRateListURL=https://www.hnb.hr/tecajn-eur/htecajn.htm
 foreignCurrency=756CHF
